Bug 1691556 - Drop stale async resource updates after a namespace change. r=jrmuizel

When the ID namespace changes for a WebRenderBridgeChild, all bindings
from that namespace are now invalid. We already drop any outstanding
async animation holds on surfaces for recycling, but we still would try
to send out async resource updates that were already queued before the
namespace was changed. This patch forces us to drop those now defunct
transactions.

Differential Revision: https://phabricator.services.mozilla.com/D108481